--- a/packages/devworkspace_share/devworkspaceshare.yaml
+++ b/packages/devworkspace_share/devworkspaceshare.yaml
@@ -18,3 +18,28 @@ spec:
       openAPIV3Schema:
         type: object
         x-kubernetes-preserve-unknown-fields: true
+---        
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: devworkspace-share-role
+rules:
+- apiGroups: ["devworkspace.webide.com"]
+  #
+  # at the HTTP level, the name of the resource for accessing Secret
+  # objects is "secrets"
+  resources: ["*"]
+  verbs: ["*"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: devworkspace-share-rolebinding
+subjects:
+- kind: Group
+  name: system:authenticated # Name is case sensitive
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: ClusterRole
+  name: devworkspace-share-role
+  apiGroup: rbac.authorization.k8s.io
